# microsandbox

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile.agentd  FAQ.md  Makefile  README.md  SECURITY.md  actionlint.yaml  justfile  msbnet-entitlements.plist  plan.md  python_examples.md  rust_examples.md  test-host-access.sh  typescript_examples.md
agent-client/rust/: Cargo.toml  README.md
agent-client/rust/lib/: client.rs  error.rs  lib.rs
crates/agentd/: Cargo.toml
crates/agentd/lib/: agent.rs  clock.rs  config.rs  error.rs  fs.rs  handoff.rs  heartbeat.rs  init.rs  lib.rs  network.rs  rlimit.rs  serial.rs  session.rs  tcp.rs  teardown.rs  tls.rs
crates/api/: Cargo.toml
crates/api/lib/: adapter.rs  auth.rs  dto.rs  error.rs  ids.rs  lib.rs  server.rs  state.rs  store.rs
crates/api/tests/: contract.rs  devboxes.rs  executions.rs  foundations.rs  route_shapes.rs  store.rs
crates/cli/: Cargo.toml
crates/cli/lib/: boot_error_render.rs  exec_error_render.rs  lib.rs  log_args.rs  microvm_cmd.rs  net_rule.rs  sandbox_cmd.rs  supervisor_cmd.rs  ui.rs
crates/cli/tests/: exec_stream.rs  exec_stream_scenarios.rs  live_resize.rs  ssh.rs
crates/db/: Cargo.toml
crates/db/lib/: connection.rs  lib.rs  pool.rs  retry.rs
crates/filesystem/: Cargo.toml  README.md  build.rs
crates/filesystem/lib/: lib.rs
crates/image/: Cargo.toml  README.md
crates/image/lib/: auth.rs  config.rs  crc32c.rs  digest.rs  error.rs  filetree.rs  flat.rs  lib.rs  lock.rs  manifest.rs  path_bytes.rs  platform.rs  progress.rs  pull.rs  registry.rs  store.rs  tar_ingest.rs  vmdk.rs
crates/metrics/: Cargo.toml
crates/metrics-collector/: Cargo.toml
crates/metrics-collector/lib/: builder.rs  driver.rs  error.rs  lib.rs  mocks.rs  reader.rs  worker.rs
crates/metrics-collector/tests/: cli.rs  otel_exporter.rs
crates/metrics/lib/: error.rs  layout.rs  lib.rs  registry.rs  snapshot.rs
crates/microsandbox/: Cargo.toml  README.md  build.rs
crates/microsandbox-types/: Cargo.toml
crates/microsandbox-types/lib/: cloud.rs  domain.rs  error.rs  lib.rs  typescript.rs  validation.rs
crates/microsandbox/lib/: error.rs  lib.rs  size.rs
crates/microsandbox/tests/: correlation_ids.rs  domain_policy.rs  host_access.rs  http_connect_secret.rs  init_handoff.rs  log_stream.rs  log_stream_e2e.rs  network_ports.rs  parent_watchdog.rs  plain_http_secret.rs  replace.rs  security_profile.rs  snapshot_artifact.rs  ssh.rs  stdin.rs  stop_flush.rs  tls.rs  tls_intercept.rs
crates/network/: Cargo.toml  build.rs
crates/network/csrc/: vmnet_shim.c
crates/network/lib/: addr.rs  backend.rs  builder.rs  config.rs  conn.rs  device.rs  engine.rs  icmp_error.rs  icmp_relay.rs  lib.rs  network.rs  proxy.rs  publisher.rs  ready.rs  shared.rs  stack.rs  udp_fragments.rs  udp_relay.rs
crates/network/tests/: domain_policy_dns_cache.rs
crates/oci-runtime/: Cargo.toml  README.md
crates/oci-runtime/lib/: lib.rs
crates/protocol/: Cargo.toml  VERSIONING.md
crates/protocol/lib/: codec.rs  core.rs  error.rs  exec.rs  fs.rs  heartbeat.rs  lib.rs  message.rs  shutdown.rs
crates/protocol/schema/: gen-3.json  gen-5.json  gen-6.json  gen-7.json
crates/protocol/tests/: schema_snapshot.rs
crates/runtime/: Cargo.toml
crates/runtime/lib/: boot_error.rs  bootstrap_fs.rs  clock.rs  console.rs  control.rs  drain.rs  error.rs  exec_log.rs  heartbeat.rs  launch.rs  lib.rs  logging.rs  maintenance.rs  metrics.rs  monitor.rs  policy.rs  relay.rs  startup.rs  supervisor.rs  termination.rs  vm.rs
crates/test-init/: Cargo.toml
crates/test-macros/: Cargo.toml
crates/test-macros/src/: lib.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/lib/: copy.rs  extent.rs  format.rs  lib.rs  log_text.rs  performance.rs  process.rs  process_lock.rs  ttl_reverse_index.rs  wake_pipe.rs
examples/rust/net-secrets-body/: Cargo.toml
microsandbox/: Cargo.toml  build.rs
microsandbox-agentd/: Cargo.toml
microsandbox-agentd/lib/: agent.rs  serial.rs  session.rs
microsandbox-filesystem/: Cargo.toml  build.rs
microsandbox/lib/: error.rs  lib.rs
microsandbox/lib/db/: mod.rs
sdk/go-ffi/: Cargo.toml  build.rs  microsandbox_go_ffi.h
sdk/go-ffi/src/: lib.rs
sdk/node-ts/: Cargo.toml  README.md  examples.md  index.cjs  index.d.cts  index.d.ts  index.mjs  package-lock.json  package.json  pnpm-lock.yaml  postinstall.js  tsconfig.json  vitest.config.ts
sdk/node-ts/lib/: exec.rs  fs.rs  helpers.rs  install.js  lib.rs  sandbox.rs  types.rs
sdk/node-ts/native/: agent.rs  attach_options_builder.rs  dns_builder.rs  error.rs  exec.rs  exec_options_builder.rs  fs.rs  helpers.rs  image.rs  image_builder.rs  index.cjs  index.d.ts  init_options_builder.rs  interface_overrides_builder.rs  lib.rs  metrics.rs  mount_builder.rs  network_builder.rs  network_policy_builder.rs  patch_builder.rs  pull_progress.rs  registry_builder.rs  root_disk_builder.rs  runtime_config.rs  sandbox.rs  sandbox_builder.rs  sandbox_handle.rs  secret_builder.rs  setup.rs  snapshot.rs  snapshot_builder.rs  ssh.rs  tls_builder.rs  types.rs  violation_action_builder.rs  volume.rs  volume_builder.rs
sdk/node-ts/scripts/: prepare-platform-package.mjs  prune-platform-optional-deps.mjs
sdk/node-ts/src/: agent.ts  all-metrics.ts  attach-options-builder.ts  dns-builder.ts  errors.ts  exec-event.ts  exec-options-builder.ts  exec.ts  exit-status.ts  fs-types.ts  fs.ts  image.ts  index.ts  log-level.ts  logs.ts  metrics-stream.ts  metrics.ts  modify.ts  mount-builder.ts  mount.ts  network-builder.ts  network-config.ts  patch-builder.ts  patch.ts  pull-policy.ts  pull-progress.ts  registry-config-builder.ts  registry.ts  rlimit.ts  rootfs.ts  runtime.ts  sandbox-builder.ts  sandbox-config.ts  sandbox-handle.ts  sandbox-status.ts  sandbox.ts  secret-builder.ts  setup.ts  size.ts  snapshot-handle.ts  (+9 more)
sdk/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
sdk/rust/: Cargo.toml  README.md  build.rs
(+1707 files in other folders)
