[package]
name = "microsandbox-filesystem"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[features]
prebuilt = ["dep:ureq"]

[build-dependencies]
microsandbox-utils = { path = "../microsandbox-utils" }
ureq = { workspace = true, optional = true }
