[package]
name = "microsandbox"
description = "`microsandbox` is the core library for the microsandbox project."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "microsandbox"
path = "bin/main.rs"

[lib]
name = "microsandbox"
path = "lib/lib.rs"

[features]
prebuilt = ["microsandbox-filesystem/prebuilt", "dep:ureq"]

[dependencies]
microsandbox-filesystem = { path = "../microsandbox-filesystem" }
microsandbox-migration = { path = "../microsandbox-migration" }
microsandbox-utils = { path = "../microsandbox-utils" }
dirs.workspace = true
futures.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
tokio.workspace = true
thiserror.workspace = true
typed-builder.workspace = true

[build-dependencies]
microsandbox-utils = { path = "../microsandbox-utils" }
ureq = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
