[package]
name = "microsandbox-agent-client"
description = "Transport-agnostic client for the microsandbox agent protocol."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[features]
default = []
uds = []
websocket = ["dep:futures-util", "dep:tokio-tungstenite"]

[dependencies]
ciborium.workspace = true
futures-util = { workspace = true, optional = true }
microsandbox-protocol.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "sync"] }
tokio-tungstenite = { workspace = true, optional = true }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tokio-tungstenite.workspace = true
