[package]
name = "microsandbox-api"
description = "RunLoop-compatible local HTTP API for microsandbox."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "microsandbox_api"
path = "lib/lib.rs"

[[bin]]
name = "microsandbox-api"
path = "bin/main.rs"

[features]
default = ["net", "prebuilt"]
net = ["microsandbox/net"]
prebuilt = ["microsandbox/prebuilt"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
futures.workspace = true
microsandbox.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
