[package]
name = "microsandbox-cli"
description = "CLI binary for managing microsandbox environments."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "msb"
path = "bin/main.rs"

[lib]
name = "microsandbox_cli"
path = "lib/lib.rs"

[features]
default = ["prebuilt"]
prebuilt = ["microsandbox/prebuilt", "microsandbox-runtime/prebuilt"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
console.workspace = true
indicatif.workspace = true
libc.workspace = true
microsandbox = { version = "0.3.2", path = "../microsandbox", default-features = false }
microsandbox-image = { version = "0.3.2", path = "../image" }
microsandbox-runtime = { version = "0.3.2", path = "../runtime", default-features = false }
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
