[package]
name = "microsandbox-filesystem"
description = "Filesystem backends and guest filesystem support for microsandbox."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[dependencies]
libc.workspace = true
microsandbox-utils = { version = "0.4.3", path = "../utils" }
msb_krun = "0.1.11"
scopeguard.workspace = true
tempfile.workspace = true
tracing.workspace = true

[features]
default = ["prebuilt"]
prebuilt = ["dep:ureq"]

[build-dependencies]
microsandbox-utils = { version = "0.4.3", path = "../utils" }
ureq = { workspace = true, optional = true }
