[package]
name = "microsandbox-filesystem"
description = "Filesystem backends and guest filesystem support for microsandbox."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[dependencies]
libc.workspace = true
microsandbox-utils = { version = "0.5.3", path = "../utils" }
msb_krun = { git = "https://github.com/superradcompany/libkrun.git", branch = "appcypher/raise-boot-cmdline-limits" }
scopeguard.workspace = true
tempfile.workspace = true
tracing.workspace = true

[features]
default = ["prebuilt"]
prebuilt = ["microsandbox-utils/http-client"]

[build-dependencies]
microsandbox-utils = { version = "0.5.3", path = "../utils" }
