[package]
name = "microsandbox-filesystem"
description = "Filesystem backends and guest filesystem support for microsandbox."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[dependencies]
ciborium.workspace = true
libc.workspace = true
microsandbox-utils.workspace = true
msb_krun.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_bytes.workspace = true
tempfile.workspace = true
tracing.workspace = true

[dev-dependencies]
hex.workspace = true
serde_json.workspace = true

[features]
default = ["prebuilt"]
prebuilt = ["microsandbox-utils/http-client"]

[build-dependencies]
microsandbox-utils.workspace = true
