[package]
name = "microsandbox-image"
description = "OCI image pulling, layer extraction, and caching for microsandbox."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[dependencies]
astral-tokio-tar = { workspace = true }
async-compression = { workspace = true, features = ["gzip", "tokio", "zstd"] }
futures.workspace = true
hex.workspace = true
libc.workspace = true
microsandbox-utils.workspace = true
oci-client.workspace = true
rustls-pemfile.workspace = true
oci-spec.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "rt", "sync"] }
tokio-util.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Ioctl"] }

[dev-dependencies]
rcgen.workspace = true
tempfile.workspace = true
