[package]
name = "microsandbox-metrics-collector"
description = "Metrics collector orchestrator and `msb-metrics` binary. Polls the shared-memory metrics registry and ships data to backends (OTLP, …)."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "microsandbox_metrics_collector"
path = "lib/lib.rs"

[[bin]]
name = "msb-metrics"
path = "bin/main.rs"

[dependencies]
# Shared-memory primitives — the read source for every tick.
microsandbox-metrics = { version = "0.5.2", path = "../metrics" }
# ENOENT detection on shm_open failures.
libc.workspace = true
# Async runtime + primitives (broadcast, mpsc, JoinSet, time).
tokio = { workspace = true }
# BoxFuture, StreamExt — used by the MetricsExporter trait + worker.
futures.workspace = true
# Wall-clock timestamps on each collection.
chrono.workspace = true
# Binary CLI.
clap.workspace = true
# Error plumbing.
anyhow.workspace = true
thiserror.workspace = true
# Structured logging.
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
# Tiny health/readiness HTTP server for sidecar supervisors (systemd,
# k8s, etc.). axum is already pulled in transitively via tonic, so this
# adds no compile overhead.
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }

# Used by the binary to derive the shm registry name from `$MSB_HOME`.
microsandbox-utils = { version = "0.5.2", path = "../utils" }
# CLI duration parsing (e.g. "1s", "500ms").
humantime = "2"
# Resolving the default `~/.microsandbox` path when --msb-home is omitted.
dirs.workspace = true

# OTel exporter (backs the `msb-metrics otel` subcommand).
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["metrics"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = [
    "metrics",
    "grpc-tonic",
    "http-proto",
    "reqwest-blocking-client",
    "gzip-tonic",
    "tls",
    "tls-webpki-roots",
] }
tonic = { version = "0.12", default-features = false, features = [
    "tls",
    "tls-webpki-roots",
] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
