[package]
name = "microsandbox-types"
description = "Shared task and wire contract types for microsandbox."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "microsandbox_types"
path = "lib/lib.rs"

[[bin]]
name = "microsandbox-types-generate"
path = "bin/main.rs"
required-features = ["ts"]

[features]
default = []
ts = ["dep:ts-rs", "ts-rs/chrono-impl", "ts-rs/serde-json-impl"]

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
