[package]
name = "microsandbox"
description = "`microsandbox` is the core library for the microsandbox project."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "microsandbox"
path = "lib/lib.rs"

[features]
prebuilt = ["dep:ureq", "microsandbox-filesystem/prebuilt"]

[dependencies]
bytes.workspace = true
chrono.workspace = true
crossterm.workspace = true
dirs.workspace = true
futures.workspace = true
libc.workspace = true
microsandbox-db = { version = "0.2.7", path = "../db" }
microsandbox-filesystem = { version = "0.2.7", path = "../filesystem" }
microsandbox-image = { version = "0.2.7", path = "../image" }
microsandbox-migration = { version = "0.2.7", path = "../migration" }
microsandbox-network = { version = "0.2.7", path = "../network" }
microsandbox-protocol = { version = "0.2.7", path = "../protocol" }
microsandbox-runtime = { version = "0.2.7", path = "../runtime" }
microsandbox-utils = { version = "0.2.7", path = "../utils" }
nix = { workspace = true, features = ["process", "signal"] }
reqwest.workspace = true
scopeguard.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
typed-builder.workspace = true
which.workspace = true

[build-dependencies]
microsandbox-utils = { version = "0.2.7", path = "../utils" }
ureq = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
