[package]
name = "microsandbox-network"
description = "Networking types for the microsandbox project."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[dependencies]
ipnetwork = { workspace = true }
serde = { workspace = true }
