[package]
name = "microsandbox-oci-runtime"
description = "OCI Runtime Specification-compatible runtime binary for Microsandbox."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "microsandbox-runtime"
path = "bin/main.rs"

[lib]
name = "microsandbox_oci_runtime"
path = "lib/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
libc.workspace = true
microsandbox = { workspace = true, features = ["net"] }
microsandbox-protocol.workspace = true
microsandbox-runtime = { workspace = true, features = ["net"] }
nix = { workspace = true, features = ["fs", "socket", "term", "uio"] }
oci-spec.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile.workspace = true
