[package]
name = "microsandbox-runtime"
description = "Runtime library for the microsandbox supervisor and microVM entry points."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "microsandbox_runtime"
path = "lib/lib.rs"

[dependencies]
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
libc.workspace = true
microsandbox-db = { version = "0.3.0", path = "../db" }
microsandbox-filesystem = { version = "0.3.0", path = "../filesystem" }
microsandbox-network = { version = "0.3.0", path = "../network" }
microsandbox-protocol = { version = "0.3.0", path = "../protocol" }
microsandbox-utils = { version = "0.3.0", path = "../utils" }
msb_krun = { version = "0.1.6", features = ["blk", "net"] }
nix = { workspace = true, features = ["process", "signal"] }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
