[package]
name = "test-init"
description = "Tiny static guest init binary used by handoff integration tests."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "test-init"
path = "bin/main.rs"

[dependencies]
libc = { workspace = true }

[lints.rust]
# Linux-only binary; on non-Linux hosts main() short-circuits with a panic.
unused_imports = "allow"
